Added initial functionality for game board and game state controller

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="index.js" defer></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,19 +15,19 @@
     <main>
         <div class="game-container">
             <div class="board-partition-top">
-                <div class="partition-columns" id="partition-one"></div>
-                <div class="partition-columns" id="partition-two"></div>
-                <div class="partition-columns" id="partition-three"></div>
+                <div class="partition-columns" id="partition-one" data-partition-number="0"></div>
+                <div class="partition-columns" id="partition-two" data-partition-number="1"></div>
+                <div class="partition-columns" id="partition-three" data-partition-number="2"></div>
             </div>
             <div class="board-partition-mid">
-                <div class="partition-columns" id="partition-four"></div>
-                <div class="partition-columns" id="partition-five"></div>
-                <div class="partition-columns" id="partition-six"></div>
+                <div class="partition-columns" id="partition-four" data-partition-number="3"></div>
+                <div class="partition-columns" id="partition-five" data-partition-number="4"></div>
+                <div class="partition-columns" id="partition-six" data-partition-number="5"></div>
             </div>
             <div class="board-partition-bot">
-                <div class="partition-columns" id="partition-seven"></div>
-                <div class="partition-columns" id="partition-eight"></div>
-                <div class="partition-columns" id="partition-nine"></div>
+                <div class="partition-columns" id="partition-seven" data-partition-number="6"></div>
+                <div class="partition-columns" id="partition-eight" data-partition-number="7"></div>
+                <div class="partition-columns" id="partition-nine" data-partition-number="8"></div>
             </div>
         </div>
     </main>
