Added restart functionality

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div class="game-inputs-container">
             <button id="restart">Restart Game</button>
             <div class="players">
-                <div class="player" id="player-one">
+                <div class="player" id="player1">
                     Player One
                     <input type="text" placeholder="Name" id="pone-name">
                     <input type="text" placeholder="Weapon" id="pone-weapon">
                     <input type="submit" value="Set Player One" id="pone-lock">
                 </div>
-                <div class="player" id="player-two">
+                <div class="player" id="player2">
                     Player Two
                     <input type="text" placeholder="Name" id="ptwo-name">
                     <input type="text" placeholder="Weapon" id="ptwo-weapon">
