--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 <div class="partition-columns" id="partition-nine" data-partition-number="8"></div>
             </div>
         </div>
+        <p id="winner"></p>
     </main>
 </body>
 </html>
